<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout_product"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_all_defaultpadding_16dp"
        tools:context=".ProductActivity">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageview_product_product"
            android:layout_width="@dimen/imageview_product_productimage_300dp"
            android:layout_height="@dimen/imageview_product_productimage_300dp"
            android:src="@drawable/img_no_image"
            app:layout_constraintEnd_toEndOf="@id/constraintlayout_product"
            app:layout_constraintStart_toStartOf="@id/constraintlayout_product"
            tools:ignore="MissingConstraints" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textview_product_currentproductname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_all_defaultmargin_16dp"
            android:background="@drawable/background_textview_underlined"
            android:text=""
            android:textSize="@dimen/textview_product_currentproductname_42sp"
            app:layout_constraintEnd_toEndOf="@id/constraintlayout_product"
            app:layout_constraintStart_toStartOf="@id/constraintlayout_product"
            app:layout_constraintTop_toBottomOf="@id/imageview_product_product"
            tools:ignore="MissingConstraints"
            tools:text="Product Name" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_all_defaultmargin_16dp"
            app:layout_constraintTop_toBottomOf="@id/textview_product_currentproductname"
            tools:ignore="MissingConstraints">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_product_quantitytitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_quantity"
                android:textSize="@dimen/textview_product_quantitytitle_20sp"
                app:layout_constraintBottom_toBottomOf="@id/constraintlayout_product"
                app:layout_constraintTop_toTopOf="@id/constraintlayout_product"
                tools:ignore="MissingConstraints,NotSibling" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textview_product_currentquantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_product_currentquantitystartleftmargin_8dp"
                android:layout_marginLeft="@dimen/margin_product_currentquantitystartleftmargin_8dp"
                android:text=""
                android:textSize="@dimen/textview_product_currentquantity_42sp"
                app:layout_constraintStart_toEndOf="@id/textview_product_quantitytitle"
                tools:text="00000" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="@id/constraintlayout_product">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonProductactivityBack"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/all_back" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/buttonProductactivityEdit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/all_edit" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>